Fix/text overflow wrap (#221)
* makes text wrap when overflowing parent

* fixes problem with undesired whitespace prefix

--- a/src/components/beagle-text/beagle-text.component.less
+++ b/src/components/beagle-text/beagle-text.component.less
@@ -22,5 +22,6 @@ beagle-text {
     background-color: inherit;
     border-radius: inherit;
     white-space: pre-wrap;
+    overflow-wrap: break-word;
   }
 }
